# MegaCraft

./: .gitignore  CMakeLists.txt  README.md
include/util/: shaderutil.h
resources/shaders/: fragment.glsl
src/: main.c  shaderutil.c
